<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pizzaria Madri</string>
    <string name="login">login</string>
    <string name="loading">loading</string>
    <string name="logo">Logo Pizzaria</string>
    <string name="P">P</string>
    <string name="Pequeno">4 Pedaços</string>
    <string name="M">M</string>
    <string name="Media">8 Pedaços</string>
    <string name="G">G</string>
    <string name="Grande">12 Pedaços</string>
    <string name="comprar">Adicionar a compra</string>
    <string name="version">Versão 1.0.0</string>
    <string name="copy" tools:ignore="TypographyDashes">© Copyright 2022-2023 Pizzaria Madri</string>
    <string name="politics">Políticas de Privacidade e Segurança dos Dados da Pizzaria Madri</string>
    <string name="politicsTxt">A Pizzaria Brasil, acredita que nosso sucesso está intimamente ligado aos nossos valores. Para nós, dedicação, qualidade e carinho com as pessoas são valores essenciais e por isso, desde o princípio, integram nossa cultura. Somos constituídos por pessoas para pessoas e como tal, tudo que diz respeito aos nossos clientes, colaboradores e parceiros nos importa, inclusive seus dados pessoais. Levamos a sério a proteção e segurança dos dados pessoais de todos os envolvidos em nossas operações, motivo pelo qual a coleta e o processamento de dados em nossos ambientes e sistemas é realizada apenas dentro do contexto da operação, com o objetivo de garantir e aprimorar a sua experiência. Possuímos lisura em todas as nossas relações e não monetizamos dados pessoais.
\n Esta Política de Privacidade, em conjunto aos Termos de Uso, descreve e detalha nosso compromisso com a proteção e transparência no tratamento de dados pessoais, seja aqueles coletados por meio de nossas plataformas, na compra de nossos produtos, ou, ainda, no relacionamento com nossos parceiros.
\n Se, após ler esta política e nossos termos de uso, você não entender ou concordar com algum ponto, pedimos que interrompa a navegação e entre em contato conosco, através do Tia Eda, teremos prazer de atendê-lo e principalmente de conversar sobre nossas ações direcionadas à Lei Geral de Proteção de Dados - LGPD.
\n Falando sobre ela:
    </string>
    <string name="politics01Title">1. Você sabe quais dados são protegidos pela LGPD?</string>
    <string name="politics02Title">2. Gostaria de saber quais dados pessoais utilizamos em nossas operações?</string>
    <string name="politics03Title">3. O que são cookies?</string>
    <string name="politics04Title">4. Por que precisamos dos dados pessoais?</string>
    <string name="politics05Title">5. CONTROLADOR e OPERADOR, quem são os agentes de tratamento?</string>
    <string name="politics06Title">6. Seus dados são compartilhados?</string>
    <string name="politics07Title">7. Por quanto tempo utilizamos e armazenamos os dados pessoais?</string>
    <string name="politics08Title">8.Titular de dados e seus direitos. Como exercê-los?</string>
    <string name="politics09Title">9. Carinho e proteção, seus dados estão seguros com a gente?</string>
    <string name="politics10Title">10. Encarregado de Proteção de Dados, temos?</string>
    <string name="politics11Title">11. DISPOSIÇÕES GERAIS</string>
    <string name="politics01">A Lei Geral de Proteção de Dados - LGPD (Lei nº 13.709/2018) veio para proteger os dados pessoais e dados pessoais sensíveis da pessoa física no Brasil, também chamada de titular de dados. \n
            De acordo com a LGPD, “dado pessoal” é qualquer dado que identifique ou torne identificável uma pessoa física. Já o “dado pessoal sensível” é aquele que, por sua natureza, diz respeito a informações que merecem um cuidado maior, principalmente para proteção contra discriminações.\n
            Quanto aos dados sensíveis, a LGPD determina que se enquadram nesse conceito dados sobre origem racial ou étnica, convicção religiosa, opinião política, filiação a sindicato ou a organização de caráter religioso, filosófico ou político, dado referente à saúde ou à vida sexual, e dado genético ou biométrico, quando vinculados a uma pessoa física.
</string>
    <string name="politics02">O acesso a todas as funcionalidades de nossas plataformas, incluindo a compra de nossos produtos no sistema “delivery”, depende da coleta e compartilhamento de dados pessoais.
É importante que você saiba que podem ser coletados diferentes tipos de dados pessoais, como dados de identificação do titular, dados de visitantes do site, dados dos colaboradores, dentre outros, a depender da utilização de nossa plataforma, ou mesmo das exigências da legislação trabalhista, em caso de colaboradores.
Para atender sua solicitação ou realizar nossas operações podemos coletar os seguintes tipos de dados pessoais:
a.	Dados de identificação e contato, como: nome completo, e-mail, CPF, celular, endereço e data de nascimento;
b.	Dados de navegação, como: endereço de IP e páginas visitadas no nosso site;
c.	Dados de geolocalização e de identificação dos aparelhos;
d.	Dados de pagamento, como: número e/ou outras informações de cartão de crédito ou débito, além do histórico de pagamentos efetuados;
e.	Dados de autenticação, como login e senha.
f.	Dados biométricos, como: imagens do sistema de segurança de nossas lojas e estabelecimentos;
No preenchimento das informações cadastrais, é importante que você (ou a pessoa autorizada), insira apenas   informações verdadeiras e atualizadas, já que não nos responsabilizamos pela verificação. A responsabilidade, em qualquer caso, civil e/ou criminal, é sua quanto à veracidade, exatidão e autenticidade das informações incluídas em nossos bancos de dados.
Além dos dados mencionados acima, coletamos e armazenamos automaticamente informações sobre a sua atividade e navegação no site, mediante a utilização de cookies (veja mais detalhes no próximo tópico).
Por fim, solicitamos que "Menores de idade" não façam compras e não pratiquem outros atos legais neste site e/ou aplicativos sem o consentimento dos pais ou responsáveis legais, exceto se permitido pela legislação local aplicável.
</string>
    <string name="politics03">Os cookies poderiam ser mais uma de nossas delícias (quem sabe já não são! Já procurou em nosso cardápio?), mas neste caso não são! Para nossa política e no contexto do mundo da tecnologia, o cookie é um pequeno arquivo de texto, colocado no seu dispositivo ou navegador, que permite a sua identificação enquanto usuário e o dispositivo utilizado.
Nosso site utiliza cookies e outras tecnologias semelhantes para armazenar e gerenciar as suas preferências de navegação, habilitar conteúdos e coletar dados de análise e utilização de nossas plataformas digitais. O uso dessas tecnologias é muito comum em todas as páginas da internet.
Os cookies que utilizamos podem desempenhar diferentes funções. Alguns são necessários e essenciais para a navegação e utilização dos recursos de nossas plataformas, outros coletam informações sobre como você utiliza o site e servem para melhorar o desempenho e a experiência de navegação. Por fim, os cookies funcionais relembram suas escolhas e preferências, personalizando a sua experiência no site.
Em nosso site ou em qualquer outra página de internet, você poderá desabilitar os cookies através das configurações de seu navegador, instalando plug-ins disponíveis no mercado, ou ainda fazendo uso de outras tecnologias que entenda serem necessárias.
</string>
    <string name="SetaVoltar">Seta Voltar</string>
    <string name="fragment_inicio">Inicio</string>
    <string name="fragment_menu">Menu</string>
    <string name="fragment_pedidos">Pedidos</string>
    <string name="fragment_conta">Conta</string>
    <string name="promo">Promoções</string>
    <string name="Pizza">Pizza</string>
    <string name="Sobremesas">Sobremesas</string>
    <string name="View">Tela</string>
    <string name="entradas">Entradas</string>
    <string name="Bacalhau">Bolinhos de Bacalhau</string>
    <string name="descBacalhau">Esta porção de bolinhos crocantes por fora e macios por dentro é preparada com bacalhau de verdade, o que garante um sabor único. É perfeita para servir como aperitivo e desfrutar de momentos de descontração com a família e amigos.</string>
    <string name="valorBacalhau">R$ 35,20</string>
    <string name="Bruschetta">Porção de Bruschetta</string>
    <string name="descBruschetta">Essa porção de bruschettas é feita com pão francês torrado, tomates italianos picados, queijo parmesão, manjericão e azeite de oliva. Uma combinação de sabores deliciosa para iniciar sua refeição.</string>
    <string name="valorBruschetta">R$ 20,00</string>
    <string name="Croquetes">Porção de Croquetes</string>
    <string name="descCroquetes">Estes croquetes são preparados com ingredientes selecionados e temperos especiais para garantir um sabor único e delicioso. São perfeitos para acompanhar uma bebida e desfrutar de momentos de descontração.</string>
    <string name="valorCroquetes">R$ 25,00</string>
    <string name="Rissois">Porção de Rissóis</string>
    <string name="descRissois">Esta porção de rissóis é preparada com ingredientes selecionados e temperos especiais para garantir um sabor único e delicioso. É perfeita para servir como aperitivo e desfrutar de momentos de descontração com a família e amigos.</string>
    <string name="valorRissois">R$ 18,00</string>
    <string name="Abobrinha">Antepasto De Abobrinha</string>
    <string name="descAbobrinha">Esta porção de antepasto de abobrinha é preparada com ingredientes selecionados e temperos especiais para garantir um sabor único e delicioso. É perfeita para iniciar sua refeição e desfrutar de sabores surpreendentes.</string>
    <string name="valorAbobrinha">R$ 26,00</string>
    <string name="Berinjela">Palitinhos De Berinjela Frita</string>
    <string name="descBerinjela">Estes palitinhos de berinjela frita são preparados com ingredientes selecionados e temperos especiais para garantir um sabor único e delicioso. São perfeitos para acompanhar uma bebida e desfrutar de momentos de descontração.</string>
    <string name="valorBerinjela">R$ 22,00</string>
</resources>