<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.entradas">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/entra01"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada01"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/bacalhau" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Bacalhau"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE01"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descBacalhau"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorBacalhau"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entra02"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/entra01"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada02"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/bruschetta" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Bruschetta"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE02"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descBruschetta"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorBruschetta"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entra03"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/entra02"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada03"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/croquetes" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Croquetes"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE03"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descCroquetes"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorCroquetes"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entra04"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/entra03"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada04"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/rissois" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Rissois"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE04"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descRissois"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorRissois"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entra05"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/entra04"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada05"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/abobrinha" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Abobrinha"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE05"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descAbobrinha"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorAbobrinha"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/entra06"
                android:layout_width="0dp"
                android:layout_height="126dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/entra05"
                tools:ignore="MissingConstraints">


                <ImageView
                    android:id="@+id/entrada06"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/rounded_border"
                    android:clipToOutline="true"
                    android:scaleType="fitStart"
                    android:src="@drawable/berinjela" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleE06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/Berinjela"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/descE06"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/descBerinjela"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/valorE06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/out_regular"
                        android:text="@string/valorBerinjela"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</ScrollView>